# Tetris

./: .gitignore  README.md
DEV4_TETRIS_D121_58124_60131/: .gitignore
DEV4_TETRIS_D121_58124_60131/SRC_Graphic/: CMakeLists.txt  mainwindow.ui
DEV4_TETRIS_D121_58124_60131/SRC_Graphic/Model/: Board.h  Game.cpp  Game.h
DEV4_TETRIS_D121_58124_60131/SRC_Graphic/Model/Shapes/: Shapes.h
DEV4_TETRIS_D121_58124_60131/SRC_Graphic/Util/: Observable.h  Observer.h
DEV4_TETRIS_D121_58124_60131/src/Controller/: Controller.cpp  Controller.h  main.cpp
DEV4_TETRIS_D121_58124_60131/src/Model/: Bag.h  Board.cpp  Game.cpp  Level.h  Rotation.h
DEV4_TETRIS_D121_58124_60131/src/Model/Shapes/: Shapes.cpp
DEV4_TETRIS_D121_58124_60131/test/: CMakeLists.txt
Modelisation/: README.txt  Tetris_D121_A&B_V1.mdj
rnvs/: cppcheckresult20.txt  tetris_2_58124_60131.html  tetris_2_58124_60131.md
rnvs_console/: CMakeLists.txt
rnvs_console/src/Controller/: Controller.cpp  Controller.h  main.cpp
rnvs_console/src/Model/: Bag.cpp  Bag.h  Board.cpp  Board.h  Colors.h  Game.cpp  Game.h  Level.cpp  TetrisInterface.h
rnvs_console/src/Model/Shapes/: Position.h  Shape.h  Shapes.h
rnvs_console/src/Util/: Observable.h
rnvs_console/src/View/: View.h  view.cpp
rnvs_console/test/: tst_position.cpp
rnvs_gui/DEV4_TETRIS_D121_58124_60131/: CMakeLists.txt
rnvs_gui/DEV4_TETRIS_D121_58124_60131/SRC_Graphic/: mainwindow.cpp  mainwindow.h  resources.qrc
rnvs_gui/DEV4_TETRIS_D121_58124_60131/SRC_Graphic/Model/: Level.cpp
rnvs_gui/DEV4_TETRIS_D121_58124_60131/SRC_Graphic/Model/Shapes/: Shape.cpp  Shapes.cpp
rnvs_gui/DEV4_TETRIS_D121_58124_60131/src/: CMakeLists.txt
rnvs_gui/DEV4_TETRIS_D121_58124_60131/src/Controller/: KeyBoardInput.cpp  KeyBoardInput.h
rnvs_gui/DEV4_TETRIS_D121_58124_60131/src/Model/: Bag.cpp  Direction.h  Game.h  TetrisInterface.h
rnvs_gui/DEV4_TETRIS_D121_58124_60131/src/Model/Shapes/: Position.cpp  Position.h  Shape.h
rnvs_gui/DEV4_TETRIS_D121_58124_60131/src/View/: View.h  view.cpp
rnvs_gui/DEV4_TETRIS_D121_58124_60131/test/: tst_level.cpp  tst_shape.cpp
